kano-toolset (3.15.0-0) unstable; urgency=low

  * Fixed issue with Make Snake launching windowed from Desktop
  * Create test coverage report
  * Run tests on push
  * Implement tests for the kano.utils.system and kano.utils.users modules

 -- Team Kano <dev@kano.me>  Wed, 20 Dec 2017 17:15:00 +0100

kano-toolset (3.14.0-0) unstable; urgency=low

  * Moved kano content and tracking sync to network hooks from kano-ui-autostart
  * Added short video animations to kano-splash, see README for details
  * Add Kano URI scheme comprehension to WebApp
  * Add feature to stop kano-start-splash running in the background
  * Rerouted Logout to Reboot to avoid bug in kano-boards-daemon (PiHat lib)
  * Make `sed()` function less susceptible to file corruption in the event of
    a power failure

 -- Team Kano <dev@kano.me>  Tue, 5 Dec 2017 10:20:00 +0100

kano-toolset (3.13.0-0) unstable; urgency=low

  * Migrated Busybox dhcp client to a more modern implementation

 -- Team Kano <dev@kano.me>  Tue, 26 Sep 2017 16:16:00 +0100

kano-toolset (3.8.0-1) unstable; urgency=low

  * Added Wireless support for Spanish/Latin and custom country codes

 -- Team Kano <dev@kano.me>  Wed, 01 Feb 2017 15:49:00 +0000

kano-toolset (3.7.0-1) unstable; urgency=low

  * i18n setup and Spanish translations

 -- Team Kano <dev@kano.me>  Tue, 27 Sep 2016 11:30:00 +0100

kano-toolset (3.3.0-1) unstable; urgency=low

  * Add Kano Dialog programmatic close option

 -- Team Kano <dev@kano.me>  Tue, 17 May 2016 18:05:00 +0100

kano-toolset (3.2.0-1) unstable; urgency=low

  * Add python module for outputting data to lua
  * Add lua module for outputting data to json

 -- Team Kano <dev@kano.me>  Tue, 10 May 2016 15:18:00 +0100

kano-toolset (3.1.0-1) unstable; urgency=low

  * Split out libkano_networking into separate package
  * Add libkano_python library (and package)

 -- Team Kano <dev@kano.me>  Wed, 20 Apr 2016 14:46:00 +0100

kano-toolset (2.4.0-1) unstable; urgency=low
